--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "start": "cross-env NODE_ENV=development nodemon index.js",
         "test": "cross-env NODE_ENV=test nodemon index.js",
         "prod": "cross-env NODE_ENV=production node index.js",
-        "pm2": "pm2 start index.js"
+        "pm2": "pm2 start index.js -i 2"
     },
     "dependencies": {
         "debug": "^4.1.1",
